# fm_chain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-21b9d6b7eb250d6578804fa480eb1665a919f535c2636141bbcb5da7b7bce2b0.json  query-3216a744c8b6cbdd87ae0bfd8d2d6a48424c3a99210dce324185acedd0bc27de.json  query-8fa743bbd5d04d5727c5f815b97130743e30bb8058d1d0ea907775fd67564460.json  query-be21068e8b5b39dc9b0e9e1db3631c40fdf39025087dcb0c8ce0ef5727fc5b9f.json
fixtures/: blocks.sql
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
migrations/: 20250517115202_create_blocks.up.sql  20250626053018_block_version.down.sql  20250626053018_block_version.up.sql  20250626055937_fix_version.up.sql
src/: cache.rs  config.rs  cube.rs  lib.rs  main.rs  messages.rs  models.rs  routes.rs  setup.rs  utils.rs  views.rs
static/: index.html  style.css
templates/: base.html  block_form.html  blocks_overview.html  index.html  messages.html  parent_form.html  solution_form.html  solution_form_placeholder.html
tests/: integration_tests.rs
