[package]
name = "fm_chain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fm_chain"
path = "src/main.rs"
test = false

[[bin]]
name = "setup"
path = "src/setup.rs"
test = false

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
askama = "0.13.0"
bcrypt = "0.17.0"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.8"
rand = "0.9.0"
rubiks-moves = "0.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "uuid", "chrono", "migrate"] }
validator = { version = "0.19.0", features = ["derive"] }
